--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
-    "sweetalert2": "^11.14.0",
-    "zustand": "^4.5.5"
+    "sweetalert2": "^11.14.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
