--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "axios": "^1.7.7",
+    "framer-motion": "^11.8.0",
     "frontend": "file:",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
